# pyosc

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .aider_conventions.md  .doit.db  .env  .gitignore  LICENSE  dodo.py  pyproject.toml
.aider.tags.cache.v4/: cache.db
scripts/: run_analysis.py  run_analysis03.py  run_analysis18.py
src/oscilloscope_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyosc/: __init__.py
src/pyosc.egg-info/: PKG-INFO  SOURCES.txt
src/pyosc/oscplot/: __init__.py  coordinate_manager.py  data_manager.py  decimation.py  display_state.py  plot.py
src/pyosc/waveform/: __init__.py  analysis.py  event_detector.py  event_plotter.py  io.py
