[project]
name = "pyosc"
version = "0.1.0"
description = "A library for analyzing R&S RTE1000 oscilloscope waveform data and detecting events."
authors = [{ name = "Sam Scholten", email = "s.scholten@uq.edu.au" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "loguru",
    "scipy",
    "numba",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
